// CanastaUY - Database Schema (DBML)
// Visualizar en: https://dbml.dbdiagram.io/

Table categories {
  category_id integer [primary key, increment]
  name varchar(255) [not null, unique]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
}

Table products {
  product_id integer [primary key]
  name varchar(500) [not null, unique]
  specification varchar(500)
  category_id integer [not null]
  brand varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
}

Table prices {
  product_id integer [not null]
  date date [not null]
  price_min numeric(10,2) [not null]
  price_max numeric(10,2) [not null]
  price_avg numeric(10,2) [not null]
  price_median numeric(10,2) [not null]
  price_std numeric(10,2)
  store_count integer [default: 0]
  offer_count integer [default: 0]
  offer_percentage numeric(5,2) [default: 0.0]

  indexes {
    (product_id, date) [pk]
  }
}

Table clients {
  client_id biginteger [primary key, increment]
  username varchar(50) [not null, unique]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, not null]

  note: "API users/accounts (humans with credentials)"
}

Table api_keys {
  api_key_id biginteger [primary key, increment]
  client_id biginteger [not null]
  key_value varchar(74) [not null, unique]
  name varchar(100) [default: 'Default']
  is_active boolean [default: true]
  last_used_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  revoked_at timestamp

  indexes {
    client_id
    key_value [unique]
    is_active
  }

  note: "API Keys for programmatic access (scripts, notebooks, CI/CD). Multiple keys per client."
}

Table refresh_tokens {
  refresh_token_id biginteger [primary key, increment]
  client_id biginteger [not null]
  token_value varchar(255) [not null, unique]
  expires_at timestamp [not null]
  is_revoked boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  revoked_at timestamp

  indexes {
    client_id
    token_value [unique]
    expires_at
    is_revoked
  }

  note: "Refresh tokens for JWT authentication (web dashboard, mobile apps)"
}

// Relaciones
ref: products.category_id > categories.category_id [delete: restrict]
ref: prices.product_id > products.product_id [delete: cascade]
ref: api_keys.client_id > clients.client_id [delete: cascade]
ref: refresh_tokens.client_id > clients.client_id [delete: cascade]
